kubernetes/apps/default/minecraft/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: minecraft
  labels:
    app: minecraft
spec:
  type: LoadBalancer
  ports:
    - name: minecraft
      port: 25565
      targetPort: minecraft
      protocol: TCP
  selector:
    app: minecraft
